# 20260313-tanaka-test-v1

./: pyproject.toml
.github/actions/run-claude-code/: action.yml
.github/actions/run-open-code/: action.yml
.github/prompts/: run_code_generator.md  run_code_regenerator.md  run_diagram_generator.md  run_experiment_validator.md  run_latex_editor.md
.github/scripts/: cloud-gpu-runner.sh
.github/workflows/: compile_latex.yml  prepare_images_for_html.yml  prepare_images_for_latex.yml  run_code_generator.yml  run_diagram_generator.yml  run_experiment.yml  run_experiment_validator.yml  run_interactive_repo_agent.yml  run_main_experiment.yml  run_on_cloud_runner.yml  run_sanity_check.yml  run_visualization.yml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-1-gpt-4-gsm8k.yaml  proposed-gpt-4-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
